[package]
name = "gstreamer_iced"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "simple binding for gstreamer for iced"
authors = ["Decodertalkers <aakari@tutanota.com>"]
homepage = "https://github.com/Decodetalkers/gstreamer_iced"
documentation = "https://docs.rs/gstreamer_iced/"
keywords = ["pipewire", "iced", "gstreamer"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.25.1"
gstreamer-app = "0.25.0"
url = "2.5.8"
thiserror = "2.0.18"
futures-time = "3.0.1"
iced_wgpu = "0.14.0"
iced_core = { version = "0.14.0", features = ["advanced"] }
iced_widget = "0.14.2"
iced_futures = "0.14.0"
iced_renderer = "0.14.0"
iced_runtime = "0.14.0"
log = "0.4.29"

[dev-dependencies]
tokio = { version = "1.51", features = ["full"] }
iced = { version = "0.14", features = ["tokio", "debug"] }
ashpd = { version = "0.13.8", default-features = false, features = [
  "tokio",
  "pipewire",
  "screencast",
  "wayland",
] }
